<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/score2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/score"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/controller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="390dp"
        android:layout_height="390dp"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="120dp"
            android:background="@color/black"
            android:text="@string/game_over_play_again"
            android:textAlignment="center"
            android:textColor="#00FF0A"
            android:textSize="15dp" />

        <Button
            android:id="@+id/new_game"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="130dp"
            android:background="#9C27B0"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/resume"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_game"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="130dp"
            android:background="#9C27B0"
            android:text="@string/resume_game"
            android:textAlignment="center" />

        <Button
            android:id="@+id/playagain"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_below="@id/resume"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="120dp"
            android:background="@color/red"
            android:text="@string/game_over_play_again"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/board"
            android:layout_width="380dp"
            android:layout_height="380dp"
            android:layout_marginLeft="5dp"
            android:background="@color/black"
            android:gravity="center"
            tools:ignore="MissingConstraints">

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score_0"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/controller"
        android:layout_width="320dp"
        android:layout_height="330dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/up"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/up"
                android:backgroundTint="#80646464"
                android:gravity="center"
                android:text="@string/up" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:gravity="center|center_horizontal|center_vertical">

            <ImageView
                android:id="@+id/left"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:src="@drawable/left"
                android:backgroundTint="#80646464"
                android:gravity="center"
                android:text="@string/left" />

            <Button
                android:id="@+id/pause"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:backgroundTint="#80646464"
                android:gravity="center"
                android:text="@string/pause" />

            <ImageView
                android:src="@drawable/right"
                android:id="@+id/right"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:backgroundTint="#80646464"
                android:gravity="center"
                android:text="@string/right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:gravity="center">

            <ImageView
                android:src="@drawable/down"
                android:id="@+id/down"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="#80646464"
                android:gravity="center"
                android:text="@string/down" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>